<resources>
    <string name="app_name">JournalApp2</string>
    <string name="how_we_doing">How we doing?</string>
    <string name="date_text">Date:</string>
    <string name="time_text">Time:</string>
    <string name="how_have_things_been">How have things been?</string>
    <string name="energy_level">Energy Level:</string>
    <string name="next_button"><![CDATA[Next ->]]></string>
    <string name="sleep_quality">Sleep Quality:</string>
    <string name="sleep_amount">Hours of sleep:</string>
    <string name="social_battery">Social Battery:</string>
    <string name="gut_feeling">Stomach/Gut feeling:</string>
    <string name="eaten">Hours since eating:</string>
    <string name="textview_default">0</string>
    <string name="notes_text_view">Notes:</string>
    <string name="note_hint">Add Notes...</string>
    <string name="upload_image">Upload Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="save_entry">Save Entry!</string>
    <string name="new_entry_button">Add New Entry</string>
    <string name="view_entries">View Entries</string>
    <string name="item_entry_mood">"Mood: "</string>
    <string name="date_textview">"Date: "</string>
    <string name="time_textview">"Time: "</string>
    <string name="energy_textview">"Energy: "</string>
    <string name="socialBatt_textview">Social Battery Lvl:</string>
    <string name="sleepAmount_textview">"Hours of Sleep: "</string>
    <string name="sleepQuality_textview">"Sleep Quality: "</string>
    <string name="stomachFeeling_textview">"Stomach Feeling: "</string>
    <string name="lastEaten_textview">"Hours since Eaten: "</string>
    <string name="notes_textview">"Notes: "</string>

</resources>